dropdow dark mode issue fixed

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -1389,8 +1389,8 @@ visibility: hidden !important;
 .box_size img,.searchContrainer img{
 pointer-events: none;
 }
-.dropdown__link{
-  color: #000 !important;
+html[data-theme="light"] .dropdown__link{
+  color: #000;
 }
 .searchBox button{
   width: 200px;
